--- a/documentacion.html
+++ b/documentacion.html
@@ -49,6 +49,44 @@
 		El directorio de trabajo: Es una copia de una versión del proyecto. Se saca de la base  de datos comprimida en el directorio Git y se coloca en el disco para uso y modificación.
 	</p>
 	<p>El área de preparación(índice): Es un archivo sencillo que contiene información a cerca de lo que va a ir en la próxima confirmación.</p>
+	<h4>Flujo de trabajo:</h4>
+	<ol>
+		<li>Se modifican los archivos en el directorio de trabajo.</li>
+		<li>Se preparan los archivos añadiéndolos al área de confirmación.</li>
+		<li>
+			Se confirman los cambios(commit), lo que toma los archivos como están en el área de preparación y almacena esas instantáneas de manera permanente en el directorio.
+		</li>
+	</ol>
+	<h4>Acciones importantes Git:</h4>
+	<p>Fetch sirve para traer la última versión disponible en el servidor remoto.</p>
+	<p>Pull sirve para aplicarlos los cambios localmente.</p>
+	<p>Commit aplica los cambios que he realizado en el servidor local.</p>
+	<p>Push sirve para subir los cambios que he hecho al servidor remoto.</p>
+	<h5>Los comandos para realizar estas acciones por consola son:</h5>
+	<ul>
+		<li>git fetch</li>
+		<li>git pull</li>
+		<li>git push</li>
+		<li>git commit -m "Commit message"</li>
+	</ul>
+	<p>Para facilitar el trabajo y poderlo hacer de una manera más ágil se va a utilizar una interfaz gráfica para Git, llamada Source tree.</p>
+	<p>Con Source tree podemos realizar tareas como:</p>
+	<ul>
+		<li>Crear y clonar repositorios de cualquier sitio, tanto Git como Mercurial. Además de integrarse perfectamente con Bitbucket o Github</li>
+		<li>Commit, push, pull y merge de nuestros archivos</li>
+		<li>Detectar y resolver conflictos.</li>
+		<li>Consultar el historial de nuestros repositorios.</li>
+	</ul>
+	<h4>Crear un repositorio con Github y Sourcetree:</h4>
+	<ul>
+		<li>Clic en Clone/new: </li><img src="./imagenesDocumentacion/newGIT.jpg">
+		<li>Esto da la posibilidad de clonar, agregar y crear un nuevo repositorio.</li>
+		<li>
+			Para poder clonar un repositorio desde Github necesitamos copiar la url del repositorio. Es recomendable hacer fork del proyecto antes, lo que me permite trabajar sobre una copia del proyecto y no sobre el original 
+		</li><img src="./imagenesDocumentacion/forkGIT.jpg">
+		<li>Ahora se copia esta URL en la ventana del Clone/new en el Sourcetree: </li><img src="./imagenesDocumentacion/cloneGIT.jpg">
+		<li>Finalmente se hace clic en Clone y el repositorio ya queda listo para trabajar.</li>
+	</ul>
 
 </body>
 </html>
