--- a/documentacion.html
+++ b/documentacion.html
@@ -87,6 +87,59 @@
 		<li>Ahora se copia esta URL en la ventana del Clone/new en el Sourcetree: </li><img src="./imagenesDocumentacion/cloneGIT.jpg">
 		<li>Finalmente se hace clic en Clone y el repositorio ya queda listo para trabajar.</li>
 	</ul>
+	<!-- Desde aca -->
+	<h3>Koding:</h3>
+	<p>
+		Es un entorno de desarrollo virtual, que permite desarrollar en lenguajes de programación como python, java, perl, Node.js, Ruby, C, C++, php etc. sin necesidad de descargar los kits de desarrollo.
+
+		Un concepto que se debe tener claro para trabajar en koding es “Koding Package Manager” que en español es el administrador de paquetes de Koding, que es una herramienta que facilita la gestión de paquetes en Koding.
+
+		Para instalar KPM se utiliza el siguiente comando:
+	</p>
+
+	<i>curl -sSL "https://raw.githubusercontent.com/koding\ /kpm-scripts/master/installers/meta" | fish</i>
+
+	<img src="./imagenesDocumentacion/kpminstall.jpg">
+
+	<p>
+		Para ver lo que puedo hacer con kpm utilizó el comando: kpm --help 
+	</p>
+
+	<h3>Tomcat</h3>
+
+	<p>
+		Tomcat es un contenedor Web con soporte de servlets y JSPs. Puede ser utilizado como servidor web por si mismo. Para instalar Tomcat utilizamos los siguientes comandos:kpm install tomcat
+	</p>
+
+	<i> kpm install tomcat </i>
+	<img src="./ImagenesDocumentacion/tomkatInstall.jpg">
+
+	<p>luego se descarga el paquete,</p>
+	<i>wget mirrors.gigenet.com/apache/tomcat/tomcat-7/v7.0.57/bin/apache-tomcat-7.0.57.tar.gz</i>
+
+	<img src="./ImagenesDocumentacion/getmirrors.jpg">
+
+	<p>Luego se descomprime el paquete descargado,</p>
+	<i>tar -xvzf apache-tomcat-7*</i>
+	<img src="./ImagenesDocumentacion/descomprimir.jpg">
+
+	<p>Para facilidad de acceso se renombra el directorio,</p>
+	<i>mv apache-tomcat-7.0.57 tomcat</i>
+	<img src="./ImagenesDocumentacion/rename.jpg">
+
+	<p>
+		Ahora se necesita crear un usuario y contraseña, para lo cual se añade esta línea debajo de </tomcat-users>  en el archivo tomcat-users.xml que se encuentra en la carpeta config:
+	</p>
+	<i> &lt;user name="anyusername" password="anypassword" roles="admin-gui,manager-gui" &gt; </i>
+
+	<p>Finalmente para evitar conflictos con el puerto debemos cambiar el puerto que usará tomcat, y esto se modifica en el archivo server.xml:</p>
+	<img src="./ImagenesDocumentacion/puerto.jpg">
+
+	<p>y ahora ya podemos iniciar el tomcat en el servidor con el siguiente comando:</p>
+	<i>bash tomcat/bin/startup.sh</i>
+
+	<img src="./ImagenesDocumentacion/iniciarTomcat.jpg">
+	
 
 </body>
 </html>
