--- a/Documentation/Git.html
+++ b/Documentation/Git.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<h2>Licencia</h2>
+	<p>The MIT License (MIT)</p>
+	<p>Copyright (c) 2015</p> 
+	<p>John Congote <jcongote@gmail.com></p>
+	<p>Felipe Calad</p>
+	<p>Isabel Lozano</p>
+	<p>Juan Diego Perez</p>
+	<p>Joinner Ovalle</p>
+	</p>
+	<p>
+		Permission is hereby granted, free of charge, to any person obtaining a copy
+		of this software and associated documentation files (the "Software"), to deal
+		in the Software without restriction, including without limitation the rights
+		to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+		copies of the Software, and to permit persons to whom the Software is
+		furnished to do so, subject to the following conditions:
+	</p>
 	<title></title>
 </head>
 <body>
