--- a/Documentation/Koding.html
+++ b/Documentation/Koding.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<h2>Licencia</h2>
-	<p>The MIT License (MIT)</p>
-	<p>Copyright (c) 2015</p> 
-	<p>John Congote <jcongote@gmail.com></p>
-	<p>Felipe Calad</p>
-	<p>Isabel Lozano</p>
-	<p>Juan Diego Perez</p>
-	<p>Joinner Ovalle</p>
-	</p>
-	<p>
-		Permission is hereby granted, free of charge, to any person obtaining a copy
-		of this software and associated documentation files (the "Software"), to deal
-		in the Software without restriction, including without limitation the rights
-		to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-		copies of the Software, and to permit persons to whom the Software is
-		furnished to do so, subject to the following conditions:
-	</p>
+	<!-- The MIT License (MIT)
+
+	Copyright (c) 2015 
+
+	John Congote <jcongote@gmail.com>
+	Felipe Calad
+	Isabel Lozano
+	Juan Diego Perez
+	Joinner Ovalle
+
+	Permission is hereby granted, free of charge, to any person obtaining a copy
+	of this software and associated documentation files (the "Software"), to deal
+	in the Software without restriction, including without limitation the rights
+	to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+	copies of the Software, and to permit persons to whom the Software is
+	furnished to do so, subject to the following conditions:
+
+	The above copyright notice and this permission notice shall be included in
+	all copies or substantial portions of the Software.
+
+	THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+	IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+	FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+	AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+	LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+	OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+	THE SOFTWARE. -->
 	<title></title>
 </head>
 <body>
